--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.4",
@@ -18,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
     "react-slideshow-image": "^4.3.1",
+    "styled-components": "^6.1.11",
     "styled-react-modal": "^3.1.1"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/styled-components": "^5.1.34",
     "@types/styled-react-modal": "^1.2.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
